--- a/app/src/main/res/layout/fragment_create_person.xml
+++ b/app/src/main/res/layout/fragment_create_person.xml
@@ -10,46 +10,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:orientation="vertical">
+        android:paddingEnd="10dp">
 
         <EditText
+            android:id="@+id/cedSavePersonal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"
             android:layout_marginTop="40dp"
-            android:textStyle="bold"
+            android:background="@drawable/edit_text_shape"
             android:hint="Cedula"
             android:maxLines="1"
+            android:padding="15dp"
             android:textColorHint="@color/black"
-            android:background="@drawable/edit_text_shape"    />
+            android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/nombreSavePersonal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"
             android:layout_marginTop="20dp"
-            android:textStyle="bold"
+            android:background="@drawable/edit_text_shape"
             android:hint="Nombre"
             android:maxLines="1"
+            android:padding="15dp"
             android:textColorHint="@color/black"
-            android:background="@drawable/edit_text_shape"    />
+            android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/direccionSavePersonal"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:padding="15dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/edit_text_shape"
             android:gravity="start"
-            android:textStyle="bold"
             android:hint="Direccion"
+            android:padding="15dp"
             android:textColorHint="@color/black"
-            android:background="@drawable/edit_text_shape"    />
-
-
-
-
+            android:textStyle="bold" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -62,6 +61,4 @@
         android:tintMode="@color/black"
         app:backgroundTint="#E91E63"
         app:borderWidth="0dp" />
-
-
 </FrameLayout>
