--- a/app/src/main/res/layout/item_personal.xml
+++ b/app/src/main/res/layout/item_personal.xml
@@ -13,13 +13,12 @@
         app:cardCornerRadius="10dp">
 
         <View
+            android:id="@+id/delPersonal"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="right"
-            android:background="@drawable/delete_dot"
             android:layout_margin="10dp"
-
-            />
+            android:background="@drawable/delete_dot" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,6 +27,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/cedPersonal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -37,30 +37,25 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/nombrePersonal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:maxLines="1"
                 android:text="Oscar Medina"
-                android:layout_marginTop="10dp"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/direccionPersonal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginTop="10dp"
                 android:text="Calle Nro Prolongacion el Prado Calle Nro Prolongacion el Prado Calle Nro Prolongacion el Prado Calle Nro Prolongacion el Prado "
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
-
-
         </LinearLayout>
-
-
     </androidx.cardview.widget.CardView>
-
-
 </LinearLayout>
