--- a/app/src/main/res/drawable/edit_text_shape.xml
+++ b/app/src/main/res/drawable/edit_text_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"  xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#D4C1C1"/>
+<solid android:color="#E6C882"/>
     <corners android:radius="10dp"/>
 
 
