--- a/app/src/main/res/layout/fragment_crear.xml
+++ b/app/src/main/res/layout/fragment_crear.xml
@@ -1,67 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#757575"
-    tools:context=".ui.Fragments.EditPersonFragment">
+    android:background="#D32F2F"
+    tools:context=".ui.Fragments.CrearFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:orientation="vertical">
+        android:paddingEnd="10dp">
+
 
         <EditText
-            android:id="@+id/cedEditPerson"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:layout_marginTop="40dp"
-            android:textStyle="bold"
-            android:hint="Cedula"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Codigo Pais"
             android:maxLines="1"
+            android:padding="15dp"
             android:textColorHint="@color/black"
-            android:background="@drawable/edit_text_shape"    />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/nombreEditPerson"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"
             android:layout_marginTop="20dp"
-            android:textStyle="bold"
-            android:hint="Nombre"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Continente..."
             android:maxLines="1"
+            android:padding="15dp"
             android:textColorHint="@color/black"
-            android:background="@drawable/edit_text_shape"    />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/dirEditPerson"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:padding="15dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:gravity="start"
-            android:textStyle="bold"
-            android:hint="Direccion"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Nombre Pais..."
+            android:maxLines="1"
+            android:padding="15dp"
             android:textColorHint="@color/black"
-            android:background="@drawable/edit_text_shape"    />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnSavePersonal"
+        android:id="@+id/btnSaveNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="26dp"
-        android:src="@drawable/ic_done"
-        android:tintMode="@color/black"
-        app:backgroundTint="#E91E63"
-        app:borderWidth="0dp" />
-
-
+        android:backgroundTint="#FF9800"
+        app:borderWidth="0dp"
+        android:tintMode="@color/white"
+        android:src="@drawable/ic_done" />
 </FrameLayout>
