--- a/app/src/main/res/layout/fragment_editar.xml
+++ b/app/src/main/res/layout/fragment_editar.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D32F2F"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.Fragments.EditarFragment">
 
     <LinearLayout
@@ -15,6 +16,7 @@
 
 
         <EditText
+            android:id="@+id/codigoPaisEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -27,11 +29,12 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/nombrePaisEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/edit_text_shape"
-            android:hint="Continente..."
+            android:hint="Nombre de Pais"
             android:maxLines="1"
             android:padding="15dp"
             android:textColorHint="@color/black"
@@ -39,11 +42,12 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/ContinentePaisEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/edit_text_shape"
-            android:hint="Nombre Pais..."
+            android:hint="Continente de  Pais..."
             android:maxLines="1"
             android:padding="15dp"
             android:textColorHint="@color/black"
