--- a/app/src/main/res/layout/fragment_editar.xml
+++ b/app/src/main/res/layout/fragment_editar.xml
@@ -57,7 +57,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnSaveNotes"
+        android:id="@+id/btnEditPaises"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
