--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,5 +34,8 @@
         <action
             android:id="@+id/action_editarFragment_to_inicioFragent"
             app:destination="@id/inicioFragent" />
+        <argument
+            android:name="paisArgs"
+            app:argType="com.oscargil80.tareasroommvvm.Model.Paises" />
     </fragment>
 </navigation>
