--- a/app/src/main/res/layout/fragment_home_usuario.xml
+++ b/app/src/main/res/layout/fragment_home_usuario.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFC107"
+    android:background="#03A9F4"
     tools:context=".UI.Fragments.HomeUsuarioFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_usuarios"
+            />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btnAddUsuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="26dp"
             android:src="@drawable/ic_add"
+            android:tintMode="@color/black"
+            app:backgroundTint="#FFC107"
+            app:borderWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="26dp"
-            app:backgroundTint="#80BDD9"
-            android:tintMode="@color/black"
-            app:borderWidth="0dp"
 
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </FrameLayout>
