--- a/app/src/main/res/drawable/edit_text_shape.xml
+++ b/app/src/main/res/drawable/edit_text_shape.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"  xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#D4C1C1"/>
-    <corners android:radius="10dp"/>
+<solid android:color="#B3E5FC" />
+    <corners android:radius="10dp" />
+    <stroke android:width="3dp" android:color="@color/purple_500"
+        android:dashGap="10px" android:dashWidth="10px"/>
 
 
 </shape>
