--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,12 @@
 
     <fragment
         android:id="@+id/fragmentContainerView"
+        app:itemIconTint="@color/black"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         app:defaultNavHost="true"
+        android:layout_gravity="center"
         app:navGraph="@navigation/nav_graph" />
 </LinearLayout>
