--- a/app/src/main/res/layout/fragment_create_usuario.xml
+++ b/app/src/main/res/layout/fragment_create_usuario.xml
@@ -1,20 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107"
+    android:background="#03A9F4"
     tools:context=".UI.Fragments.CreateUsuarioFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:text=" ESTE ES EL FRAGMENT DE CREAR USARUI"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
 
+        <EditText
+            android:id="@+id/cedSavePersonal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Usuario..."
+            android:textColor="@color/black"
+
+            android:maxLines="1"
+            android:padding="15dp"
+            android:textColorHint="#757575" />
+
+        <EditText
+            android:id="@+id/nombreSavePersonal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Clave..."
+            android:textColor="@color/black"
+            android:maxLines="1"
+            android:padding="15dp"
+            android:textColorHint="#757575" />
+
+        <EditText
+            android:id="@+id/direccionSavePersonal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edit_text_shape"
+            android:gravity="start"
+            android:hint="Descripcion..."
+            android:textColor="@color/black"
+            android:padding="15dp"
+            android:textColorHint="#757575" />
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAddPersonal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="26dp"
+        android:src="@drawable/ic_done"
+        android:tintMode="@color/black"
+        app:backgroundTint="#FFC107"
+        app:borderWidth="0dp" />
 
 
 </FrameLayout>
