--- a/app/src/main/res/layout/fragment_edit_usuario.xml
+++ b/app/src/main/res/layout/fragment_edit_usuario.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#03A9F4"
     tools:context=".UI.Fragments.EditUsuarioFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Este es el fragments Edit" />
+        android:orientation="vertical"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
+
+        <EditText
+            android:id="@+id/cedEditPersonal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Usuario..."
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:padding="15dp"
+            android:textColorHint="#757575" />
+
+        <EditText
+            android:id="@+id/nombreEditPersonal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edit_text_shape"
+            android:hint="Clave..."
+            android:maxLines="1"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#757575" />
+
+        <EditText
+            android:id="@+id/direccionEditPersonal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edit_text_shape"
+            android:gravity="start"
+            android:hint="Descripcion..."
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#757575" />
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAddPersonal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="26dp"
+        android:src="@drawable/ic_done"
+        android:tintMode="@color/black"
+        app:backgroundTint="#FFC107"
+        app:borderWidth="0dp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </FrameLayout>
