--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TareasRoomMvvM" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TareasRoomMvvM" parent="Theme.MaterialComponents.DayNight.Bridge">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">#80BDD9</item>
+        <item name="colorPrimary">#0288D1</item>
+        <item name="colorPrimaryVariant">#01141D</item>
         <item name="colorOnPrimary">@color/purple_700</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="android:colorPrimaryDark">#182786</item>
+
+
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
     </style>
 
     <style name="ProgressBar">
         <item name="colorSecondary">@color/purple_200</item>
+
 
     </style>
 </resources>
