--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -34,5 +34,8 @@
         <action
             android:id="@+id/action_editFamilyFragments_to_homeFamilyFragments"
             app:destination="@id/homeFamilyFragments" />
+        <argument
+            android:name="data"
+            app:argType="com.oscargil80.tareasroommvvm.Model.Family" />
     </fragment>
 </navigation>
