Proyecto de la tarea 4

--- a/app/src/main/res/layout/fragment_create_family.xml
+++ b/app/src/main/res/layout/fragment_create_family.xml
@@ -36,6 +36,7 @@
                 android:layout_marginTop="12dp"
                 android:background="@drawable/edittext_bg"
                 android:ems="10"
+                android:textColor="@color/black"
                 android:hint="Escriba..."
                 android:inputType="text"
                 android:padding="12dp"
@@ -56,6 +57,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/edittext_bg"
+                android:textColor="@color/black"
                 android:ems="10"
                 android:hint="escriba aqui..."
                 android:inputType="text"
@@ -76,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="12dp"
+                android:textColor="@color/black"
                 android:background="@drawable/edittext_bg"
                 android:ems="10"
                 android:hint="escriba aqui..."
