--- a/app/src/main/res/layout/fragment_home_family.xml
+++ b/app/src/main/res/layout/fragment_home_family.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/LightGrey"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Fragments.HomeFamilyFragments">
 
@@ -31,7 +33,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="26dp"
-            app:backgroundTint="@color/orange"
+            app:backgroundTint="#00893E"
             android:tintMode="@color/black"
             app:borderWidth="0dp"
 
