--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TareasRoomMvvM" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TareasRoomMvvM" parent="Theme.MaterialComponents.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">#FB8C00</item>
@@ -15,15 +15,15 @@
     </style>
 
     <style name="ProgressBar">
+        <item name="android:textColor">@color/purple_200</item>
         <item name="colorSecondary">@color/purple_200</item>
 
     </style>
-
     <style name="AlertDialogCustom" parent="@android:style/Theme.Material.Dialog">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FAFAFA</item>
+        <item name="android:textColorPrimary">#FAFAFA</item>
         <item name="android:headerDividersEnabled">true</item>
-        <item name="android:background">@android:color/holo_blue_dark</item>
+        <item name="android:background">@color/orange</item>
     </style>
 
 </resources>
