--- a/app/src/main/res/layout/item_personal.xml
+++ b/app/src/main/res/layout/item_personal.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:cardBackgroundColor="#4A4444"
+        app:cardBackgroundColor="@color/LightBlue"
         app:cardCornerRadius="10dp">
 
         <View
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="CI: 15.460.951"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
                 android:layout_marginTop="10dp"
                 android:maxLines="1"
                 android:text="Oscar Medina"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Calle Nro Prolongacion el Prado Calle Nro Prolongacion el Prado Calle Nro Prolongacion el Prado Calle Nro Prolongacion el Prado "
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
