--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TareasRoomMvvM" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TareasRoomMvvM" parent="Theme.MaterialComponents.Bridge">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">#434040</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryVariant">#00893E</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,10 +12,22 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!-- Eliminar la Barra ppor defecto -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="ProgressBar">
-        <item name="colorSecondary">@color/purple_200</item>
-
+        <item name="colorSecondary">#E64A19</item>
     </style>
+
+    <style name="AlertDialogCustom" parent="@android:style/Theme.Material.Dialog">
+        <item name="android:textColor">#FAFAFA</item>
+        <item name="android:textColorPrimary">#FAFAFA</item>
+        <item name="android:headerDividersEnabled">true</item>
+        <item name="android:background">@color/orange</item>
+    </style>
+
+
 </resources>
